# Terminal-Agent-X

./: .gitignore  README.md  README_cn.md  pyproject.toml  setup.py  test.py
.github/workflows/: python-publish.yml
terminal_agent_x/: example.sh  tax.py  utils.py
terminal_agent_x.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: multiprocess.py
