[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-agent-x"
version = "0.1.6"
authors = [
  { name="LyuLumos", email="lyujiuyang0@gmail.com" },
]

description = "A terminal agent for terminal users."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
tax = "terminal_agent_x.tax:main"

[project.urls]
"Homepage" = "https://github.com/LyuLumos/Terminal-Agent-X"
"Bug Tracker" = "https://github.com/LyuLumos/Terminal-Agent-X/issues"
"Wiki" = "https://github.com/LyuLumos/Terminal-Agent-X/wiki"